# AWS-Discovery

./: .gitignore  README.md  example.env  pyproject.toml
adapters/: update_database_item_lambda.py
domain/: create_database_item.py  generate_json_file.py  generate_laptop.py  push_upload_message_on_queue.py  upload_file_to_storage.py
scripts/: generate_json_and_save_to_db_and_storage.py
service/: main.py
