[tool.poetry]
name = "aws-discovery"
version = "0.1.0"
description = "A small project to discover AWS services and how they interact"
authors = ["Lena <lena.idier@protonmail.com>"]
readme = "README.md"
packages = [{ include = "domain" }]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.158"
boto3-stubs = { extras = ["essential"], version = "^1.34.158" }
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.format]
help = "Runs the formatting and linting tasks"
sequence = ["black domain scripts", "isort domain scripts"]
default_item_type = "cmd"

[tool.poe.tasks.lint]
help = "Runs the formatting and linting tasks"
sequence = [
    "black --check domain scripts",
    "isort -c domain scripts",
    "flake8 domain scripts",
]
default_item_type = "cmd"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
